--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "json-server":"json-server --watch src/database/db.json --port 2021",
+    "json-server": "json-server --watch src/database/db.json --port 2021",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
