--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-strap": "0.0.1",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
